# photomaton

./: .gitignore  README.md  camera.py  config.py  hotspot.py  main.py  photomaton.sh  printer.py  pyproject.toml  qr.py  script_avec_affichage_de_photo.py  script_avec_affichage_et_possibilite_d_impression.py  script_photomaton.py  scrpit_photomation_ordi.py  scrpit_photomation_raspberry.py  settings.json  ui.py  usb.py  utils.py  v1.py  v1_raspberry.py  v1_raspberry.py.txt  webserver.py
V2/: app.py  methode.py  photomaton.sh  pyproject.toml
V2/templates/: index.html
templates/: index.html
v1/: photomaton.sh  photomaton_clavier.py  pyproject.toml  script_photomaton_rasp_v2.py  scrpit_photomation_ordi.py  scrpit_photomation_raspberry.py
v1/schéma/: photomaton.fzz
v3/: camera.py  config.py  display.py  main.py  photomaton.sh  printer.py  qr_server.py  ui.py  usb.py  utils.py
