[project]
name = "photomaton"
version = "0.1.0"
description = "API Flask simple avec IHM pour prise de photo et impression"
authors = [
    { name = "Ton Nom", email = "ton.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "flask>=3.0.0"
]
requires-python = ">=3.13,<4.0"

[tool.pytest.ini_options]
addopts = "-ra -q"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false